Added remember me flag in login, added fully functional profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/YourGym
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
-debug=true
+spring.mvc.hiddenmethod.filter.enabled=true
